entregable3/Gonzalez-Guerra /Gonzalez-Guerra/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASTERISK
    DE
    O
    TRANSFORMA_A

Grammar

Rule 0     S' -> query
Rule 1     query -> TRAEME selection_todo selection_distinct selection_contando DE_LA_TABLA table_name optional_join condition optional_group_by optional_having optional_order_by optional_limit SEMICOLON
Rule 2     selection_todo -> TODO
Rule 3     selection_todo -> empty
Rule 4     selection_distinct -> LOS_DISTINTOS column_name
Rule 5     selection_distinct -> empty
Rule 6     selection_contando -> CONTANDO LPAREN TODO RPAREN
Rule 7     selection_contando -> empty
Rule 8     query -> METE_EN table_name LPAREN column_list RPAREN LOS_VALORES LPAREN value_list RPAREN SEMICOLON
Rule 9     query -> ACTUALIZA table_name SETEA column_name OPERATOR value condition SEMICOLON
Rule 10    query -> BORRA_DE_LA_TABLA table_name condition SEMICOLON
Rule 11    query -> CREA_LA_TABLA table_name LPAREN column_definitions RPAREN SEMICOLON
Rule 12    query -> CAMBIA_LA_TABLA table_name add_column drop_column SEMICOLON
Rule 13    query -> TIRA_LA_TABLA table_name SEMICOLON
Rule 14    optional_join -> MEZCLANDO table_name EN join_columns DONDE join_condition
Rule 15    optional_join -> empty
Rule 16    join_columns -> ID DOT ID OPERATOR ID DOT ID
Rule 17    join_columns -> empty
Rule 18    join_condition -> ID DOT ID OPERATOR STRING
Rule 19    join_condition -> empty
Rule 20    condition -> DONDE expression
Rule 21    condition -> CONTANDO LPAREN TODO RPAREN OPERATOR NUMBER
Rule 22    condition -> empty
Rule 23    expression -> ID OPERATOR value
Rule 24    expression -> ID PARECIDO_A value
Rule 25    expression -> ID ES_NULO
Rule 26    expression -> ID NO_NULO
Rule 27    expression -> ID ENTRE value Y value
Rule 28    expression -> ID EN_ESTO LPAREN value_list RPAREN
Rule 29    expression -> EXISTE LPAREN query RPAREN
Rule 30    expression -> ID DOT ID OPERATOR STRING
Rule 31    add_column -> AGREGA_LA_COLUMNA column_definition
Rule 32    add_column -> empty
Rule 33    drop_column -> ELIMINA_LA_COLUMNA column_name
Rule 34    drop_column -> empty
Rule 35    options_type -> LPAREN NUMBER RPAREN unico_constraint no_nulo_constraint por_defecto_constraint clave_prima_constraint clave_referente_constraint
Rule 36    options_type -> empty
Rule 37    unico_constraint -> UNICO
Rule 38    unico_constraint -> empty
Rule 39    no_nulo_constraint -> NO_NULO
Rule 40    no_nulo_constraint -> empty
Rule 41    por_defecto_constraint -> POR_DEFECTO value
Rule 42    por_defecto_constraint -> empty
Rule 43    clave_prima_constraint -> CLAVE_PRIMA
Rule 44    clave_prima_constraint -> empty
Rule 45    clave_referente_constraint -> CLAVE_REFERENTE
Rule 46    clave_referente_constraint -> empty
Rule 47    column_definition -> ID TYPE options_type
Rule 48    column_definitions -> column_definition
Rule 49    column_definitions -> column_definitions COMMA column_definition
Rule 50    column_list -> ID
Rule 51    column_list -> column_list COMMA ID
Rule 52    value_list -> value
Rule 53    value_list -> value_list COMMA value
Rule 54    value -> NUMBER
Rule 55    value -> STRING
Rule 56    value -> ID
Rule 57    optional_group_by -> AGRUPANDO_POR column_list
Rule 58    optional_group_by -> empty
Rule 59    optional_having -> WHERE_DEL_GROUP_BY condition
Rule 60    optional_having -> empty
Rule 61    optional_order_by -> ORDENA_POR column_list
Rule 62    optional_order_by -> empty
Rule 63    optional_limit -> COMO_MUCHO NUMBER
Rule 64    optional_limit -> empty
Rule 65    table_name -> ID
Rule 66    column_name -> ID
Rule 67    empty -> <empty>

Terminals, with rules where they appear

ACTUALIZA            : 9
AGREGA_LA_COLUMNA    : 31
AGRUPANDO_POR        : 57
ASTERISK             : 
BORRA_DE_LA_TABLA    : 10
CAMBIA_LA_TABLA      : 12
CLAVE_PRIMA          : 43
CLAVE_REFERENTE      : 45
COMMA                : 49 51 53
COMO_MUCHO           : 63
CONTANDO             : 6 21
CREA_LA_TABLA        : 11
DE                   : 
DE_LA_TABLA          : 1
DONDE                : 14 20
DOT                  : 16 16 18 30
ELIMINA_LA_COLUMNA   : 33
EN                   : 14
ENTRE                : 27
EN_ESTO              : 28
ES_NULO              : 25
EXISTE               : 29
ID                   : 16 16 16 16 18 18 23 24 25 26 27 28 30 30 47 50 51 56 65 66
LOS_DISTINTOS        : 4
LOS_VALORES          : 8
LPAREN               : 6 8 8 11 21 28 29 35
METE_EN              : 8
MEZCLANDO            : 14
NO_NULO              : 26 39
NUMBER               : 21 35 54 63
O                    : 
OPERATOR             : 9 16 18 21 23 30
ORDENA_POR           : 61
PARECIDO_A           : 24
POR_DEFECTO          : 41
RPAREN               : 6 8 8 11 21 28 29 35
SEMICOLON            : 1 8 9 10 11 12 13
SETEA                : 9
STRING               : 18 30 55
TIRA_LA_TABLA        : 13
TODO                 : 2 6 21
TRAEME               : 1
TRANSFORMA_A         : 
TYPE                 : 47
UNICO                : 37
WHERE_DEL_GROUP_BY   : 59
Y                    : 27
error                : 

Nonterminals, with rules where they appear

add_column           : 12
clave_prima_constraint : 35
clave_referente_constraint : 35
column_definition    : 31 48 49
column_definitions   : 11 49
column_list          : 8 51 57 61
column_name          : 4 9 33
condition            : 1 9 10 59
drop_column          : 12
empty                : 3 5 7 15 17 19 22 32 34 36 38 40 42 44 46 58 60 62 64
expression           : 20
join_columns         : 14
join_condition       : 14
no_nulo_constraint   : 35
optional_group_by    : 1
optional_having      : 1
optional_join        : 1
optional_limit       : 1
optional_order_by    : 1
options_type         : 47
por_defecto_constraint : 35
query                : 29 0
selection_contando   : 1
selection_distinct   : 1
selection_todo       : 1
table_name           : 1 8 9 10 11 12 13 14
unico_constraint     : 35
value                : 9 23 24 27 27 41 52 53
value_list           : 8 28 53

Parsing method: LALR

state 0

    (0) S' -> . query
    (1) query -> . TRAEME selection_todo selection_distinct selection_contando DE_LA_TABLA table_name optional_join condition optional_group_by optional_having optional_order_by optional_limit SEMICOLON
    (8) query -> . METE_EN table_name LPAREN column_list RPAREN LOS_VALORES LPAREN value_list RPAREN SEMICOLON
    (9) query -> . ACTUALIZA table_name SETEA column_name OPERATOR value condition SEMICOLON
    (10) query -> . BORRA_DE_LA_TABLA table_name condition SEMICOLON
    (11) query -> . CREA_LA_TABLA table_name LPAREN column_definitions RPAREN SEMICOLON
    (12) query -> . CAMBIA_LA_TABLA table_name add_column drop_column SEMICOLON
    (13) query -> . TIRA_LA_TABLA table_name SEMICOLON

    TRAEME          shift and go to state 2
    METE_EN         shift and go to state 3
    ACTUALIZA       shift and go to state 4
    BORRA_DE_LA_TABLA shift and go to state 5
    CREA_LA_TABLA   shift and go to state 6
    CAMBIA_LA_TABLA shift and go to state 7
    TIRA_LA_TABLA   shift and go to state 8

    query                          shift and go to state 1

state 1

    (0) S' -> query .



state 2

    (1) query -> TRAEME . selection_todo selection_distinct selection_contando DE_LA_TABLA table_name optional_join condition optional_group_by optional_having optional_order_by optional_limit SEMICOLON
    (2) selection_todo -> . TODO
    (3) selection_todo -> . empty
    (67) empty -> .

    TODO            shift and go to state 10
    LOS_DISTINTOS   reduce using rule 67 (empty -> .)
    CONTANDO        reduce using rule 67 (empty -> .)
    DE_LA_TABLA     reduce using rule 67 (empty -> .)

    selection_todo                 shift and go to state 9
    empty                          shift and go to state 11

state 3

    (8) query -> METE_EN . table_name LPAREN column_list RPAREN LOS_VALORES LPAREN value_list RPAREN SEMICOLON
    (65) table_name -> . ID

    ID              shift and go to state 13

    table_name                     shift and go to state 12

state 4

    (9) query -> ACTUALIZA . table_name SETEA column_name OPERATOR value condition SEMICOLON
    (65) table_name -> . ID

    ID              shift and go to state 13

    table_name                     shift and go to state 14

state 5

    (10) query -> BORRA_DE_LA_TABLA . table_name condition SEMICOLON
    (65) table_name -> . ID

    ID              shift and go to state 13

    table_name                     shift and go to state 15

state 6

    (11) query -> CREA_LA_TABLA . table_name LPAREN column_definitions RPAREN SEMICOLON
    (65) table_name -> . ID

    ID              shift and go to state 13

    table_name                     shift and go to state 16

state 7

    (12) query -> CAMBIA_LA_TABLA . table_name add_column drop_column SEMICOLON
    (65) table_name -> . ID

    ID              shift and go to state 13

    table_name                     shift and go to state 17

state 8

    (13) query -> TIRA_LA_TABLA . table_name SEMICOLON
    (65) table_name -> . ID

    ID              shift and go to state 13

    table_name                     shift and go to state 18

state 9

    (1) query -> TRAEME selection_todo . selection_distinct selection_contando DE_LA_TABLA table_name optional_join condition optional_group_by optional_having optional_order_by optional_limit SEMICOLON
    (4) selection_distinct -> . LOS_DISTINTOS column_name
    (5) selection_distinct -> . empty
    (67) empty -> .

    LOS_DISTINTOS   shift and go to state 20
    CONTANDO        reduce using rule 67 (empty -> .)
    DE_LA_TABLA     reduce using rule 67 (empty -> .)

    selection_distinct             shift and go to state 19
    empty                          shift and go to state 21

state 10

    (2) selection_todo -> TODO .

    LOS_DISTINTOS   reduce using rule 2 (selection_todo -> TODO .)
    CONTANDO        reduce using rule 2 (selection_todo -> TODO .)
    DE_LA_TABLA     reduce using rule 2 (selection_todo -> TODO .)


state 11

    (3) selection_todo -> empty .

    LOS_DISTINTOS   reduce using rule 3 (selection_todo -> empty .)
    CONTANDO        reduce using rule 3 (selection_todo -> empty .)
    DE_LA_TABLA     reduce using rule 3 (selection_todo -> empty .)


state 12

    (8) query -> METE_EN table_name . LPAREN column_list RPAREN LOS_VALORES LPAREN value_list RPAREN SEMICOLON

    LPAREN          shift and go to state 22


state 13

    (65) table_name -> ID .

    LPAREN          reduce using rule 65 (table_name -> ID .)
    SETEA           reduce using rule 65 (table_name -> ID .)
    DONDE           reduce using rule 65 (table_name -> ID .)
    CONTANDO        reduce using rule 65 (table_name -> ID .)
    SEMICOLON       reduce using rule 65 (table_name -> ID .)
    AGREGA_LA_COLUMNA reduce using rule 65 (table_name -> ID .)
    ELIMINA_LA_COLUMNA reduce using rule 65 (table_name -> ID .)
    MEZCLANDO       reduce using rule 65 (table_name -> ID .)
    AGRUPANDO_POR   reduce using rule 65 (table_name -> ID .)
    WHERE_DEL_GROUP_BY reduce using rule 65 (table_name -> ID .)
    ORDENA_POR      reduce using rule 65 (table_name -> ID .)
    COMO_MUCHO      reduce using rule 65 (table_name -> ID .)
    EN              reduce using rule 65 (table_name -> ID .)


state 14

    (9) query -> ACTUALIZA table_name . SETEA column_name OPERATOR value condition SEMICOLON

    SETEA           shift and go to state 23


state 15

    (10) query -> BORRA_DE_LA_TABLA table_name . condition SEMICOLON
    (20) condition -> . DONDE expression
    (21) condition -> . CONTANDO LPAREN TODO RPAREN OPERATOR NUMBER
    (22) condition -> . empty
    (67) empty -> .

    DONDE           shift and go to state 25
    CONTANDO        shift and go to state 26
    SEMICOLON       reduce using rule 67 (empty -> .)

    condition                      shift and go to state 24
    empty                          shift and go to state 27

state 16

    (11) query -> CREA_LA_TABLA table_name . LPAREN column_definitions RPAREN SEMICOLON

    LPAREN          shift and go to state 28


state 17

    (12) query -> CAMBIA_LA_TABLA table_name . add_column drop_column SEMICOLON
    (31) add_column -> . AGREGA_LA_COLUMNA column_definition
    (32) add_column -> . empty
    (67) empty -> .

    AGREGA_LA_COLUMNA shift and go to state 30
    ELIMINA_LA_COLUMNA reduce using rule 67 (empty -> .)
    SEMICOLON       reduce using rule 67 (empty -> .)

    add_column                     shift and go to state 29
    empty                          shift and go to state 31

state 18

    (13) query -> TIRA_LA_TABLA table_name . SEMICOLON

    SEMICOLON       shift and go to state 32


state 19

    (1) query -> TRAEME selection_todo selection_distinct . selection_contando DE_LA_TABLA table_name optional_join condition optional_group_by optional_having optional_order_by optional_limit SEMICOLON
    (6) selection_contando -> . CONTANDO LPAREN TODO RPAREN
    (7) selection_contando -> . empty
    (67) empty -> .

    CONTANDO        shift and go to state 34
    DE_LA_TABLA     reduce using rule 67 (empty -> .)

    selection_contando             shift and go to state 33
    empty                          shift and go to state 35

state 20

    (4) selection_distinct -> LOS_DISTINTOS . column_name
    (66) column_name -> . ID

    ID              shift and go to state 37

    column_name                    shift and go to state 36

state 21

    (5) selection_distinct -> empty .

    CONTANDO        reduce using rule 5 (selection_distinct -> empty .)
    DE_LA_TABLA     reduce using rule 5 (selection_distinct -> empty .)


state 22

    (8) query -> METE_EN table_name LPAREN . column_list RPAREN LOS_VALORES LPAREN value_list RPAREN SEMICOLON
    (50) column_list -> . ID
    (51) column_list -> . column_list COMMA ID

    ID              shift and go to state 39

    column_list                    shift and go to state 38

state 23

    (9) query -> ACTUALIZA table_name SETEA . column_name OPERATOR value condition SEMICOLON
    (66) column_name -> . ID

    ID              shift and go to state 37

    column_name                    shift and go to state 40

state 24

    (10) query -> BORRA_DE_LA_TABLA table_name condition . SEMICOLON

    SEMICOLON       shift and go to state 41


state 25

    (20) condition -> DONDE . expression
    (23) expression -> . ID OPERATOR value
    (24) expression -> . ID PARECIDO_A value
    (25) expression -> . ID ES_NULO
    (26) expression -> . ID NO_NULO
    (27) expression -> . ID ENTRE value Y value
    (28) expression -> . ID EN_ESTO LPAREN value_list RPAREN
    (29) expression -> . EXISTE LPAREN query RPAREN
    (30) expression -> . ID DOT ID OPERATOR STRING

    ID              shift and go to state 43
    EXISTE          shift and go to state 44

    expression                     shift and go to state 42

state 26

    (21) condition -> CONTANDO . LPAREN TODO RPAREN OPERATOR NUMBER

    LPAREN          shift and go to state 45


state 27

    (22) condition -> empty .

    SEMICOLON       reduce using rule 22 (condition -> empty .)
    AGRUPANDO_POR   reduce using rule 22 (condition -> empty .)
    WHERE_DEL_GROUP_BY reduce using rule 22 (condition -> empty .)
    ORDENA_POR      reduce using rule 22 (condition -> empty .)
    COMO_MUCHO      reduce using rule 22 (condition -> empty .)


state 28

    (11) query -> CREA_LA_TABLA table_name LPAREN . column_definitions RPAREN SEMICOLON
    (48) column_definitions -> . column_definition
    (49) column_definitions -> . column_definitions COMMA column_definition
    (47) column_definition -> . ID TYPE options_type

    ID              shift and go to state 48

    column_definitions             shift and go to state 46
    column_definition              shift and go to state 47

state 29

    (12) query -> CAMBIA_LA_TABLA table_name add_column . drop_column SEMICOLON
    (33) drop_column -> . ELIMINA_LA_COLUMNA column_name
    (34) drop_column -> . empty
    (67) empty -> .

    ELIMINA_LA_COLUMNA shift and go to state 50
    SEMICOLON       reduce using rule 67 (empty -> .)

    drop_column                    shift and go to state 49
    empty                          shift and go to state 51

state 30

    (31) add_column -> AGREGA_LA_COLUMNA . column_definition
    (47) column_definition -> . ID TYPE options_type

    ID              shift and go to state 48

    column_definition              shift and go to state 52

state 31

    (32) add_column -> empty .

    ELIMINA_LA_COLUMNA reduce using rule 32 (add_column -> empty .)
    SEMICOLON       reduce using rule 32 (add_column -> empty .)


state 32

    (13) query -> TIRA_LA_TABLA table_name SEMICOLON .

    $end            reduce using rule 13 (query -> TIRA_LA_TABLA table_name SEMICOLON .)
    RPAREN          reduce using rule 13 (query -> TIRA_LA_TABLA table_name SEMICOLON .)


state 33

    (1) query -> TRAEME selection_todo selection_distinct selection_contando . DE_LA_TABLA table_name optional_join condition optional_group_by optional_having optional_order_by optional_limit SEMICOLON

    DE_LA_TABLA     shift and go to state 53


state 34

    (6) selection_contando -> CONTANDO . LPAREN TODO RPAREN

    LPAREN          shift and go to state 54


state 35

    (7) selection_contando -> empty .

    DE_LA_TABLA     reduce using rule 7 (selection_contando -> empty .)


state 36

    (4) selection_distinct -> LOS_DISTINTOS column_name .

    CONTANDO        reduce using rule 4 (selection_distinct -> LOS_DISTINTOS column_name .)
    DE_LA_TABLA     reduce using rule 4 (selection_distinct -> LOS_DISTINTOS column_name .)


state 37

    (66) column_name -> ID .

    CONTANDO        reduce using rule 66 (column_name -> ID .)
    DE_LA_TABLA     reduce using rule 66 (column_name -> ID .)
    OPERATOR        reduce using rule 66 (column_name -> ID .)
    SEMICOLON       reduce using rule 66 (column_name -> ID .)


state 38

    (8) query -> METE_EN table_name LPAREN column_list . RPAREN LOS_VALORES LPAREN value_list RPAREN SEMICOLON
    (51) column_list -> column_list . COMMA ID

    RPAREN          shift and go to state 55
    COMMA           shift and go to state 56


state 39

    (50) column_list -> ID .

    RPAREN          reduce using rule 50 (column_list -> ID .)
    COMMA           reduce using rule 50 (column_list -> ID .)
    WHERE_DEL_GROUP_BY reduce using rule 50 (column_list -> ID .)
    ORDENA_POR      reduce using rule 50 (column_list -> ID .)
    COMO_MUCHO      reduce using rule 50 (column_list -> ID .)
    SEMICOLON       reduce using rule 50 (column_list -> ID .)


state 40

    (9) query -> ACTUALIZA table_name SETEA column_name . OPERATOR value condition SEMICOLON

    OPERATOR        shift and go to state 57


state 41

    (10) query -> BORRA_DE_LA_TABLA table_name condition SEMICOLON .

    $end            reduce using rule 10 (query -> BORRA_DE_LA_TABLA table_name condition SEMICOLON .)
    RPAREN          reduce using rule 10 (query -> BORRA_DE_LA_TABLA table_name condition SEMICOLON .)


state 42

    (20) condition -> DONDE expression .

    SEMICOLON       reduce using rule 20 (condition -> DONDE expression .)
    AGRUPANDO_POR   reduce using rule 20 (condition -> DONDE expression .)
    WHERE_DEL_GROUP_BY reduce using rule 20 (condition -> DONDE expression .)
    ORDENA_POR      reduce using rule 20 (condition -> DONDE expression .)
    COMO_MUCHO      reduce using rule 20 (condition -> DONDE expression .)


state 43

    (23) expression -> ID . OPERATOR value
    (24) expression -> ID . PARECIDO_A value
    (25) expression -> ID . ES_NULO
    (26) expression -> ID . NO_NULO
    (27) expression -> ID . ENTRE value Y value
    (28) expression -> ID . EN_ESTO LPAREN value_list RPAREN
    (30) expression -> ID . DOT ID OPERATOR STRING

    OPERATOR        shift and go to state 58
    PARECIDO_A      shift and go to state 59
    ES_NULO         shift and go to state 60
    NO_NULO         shift and go to state 61
    ENTRE           shift and go to state 62
    EN_ESTO         shift and go to state 63
    DOT             shift and go to state 64


state 44

    (29) expression -> EXISTE . LPAREN query RPAREN

    LPAREN          shift and go to state 65


state 45

    (21) condition -> CONTANDO LPAREN . TODO RPAREN OPERATOR NUMBER

    TODO            shift and go to state 66


state 46

    (11) query -> CREA_LA_TABLA table_name LPAREN column_definitions . RPAREN SEMICOLON
    (49) column_definitions -> column_definitions . COMMA column_definition

    RPAREN          shift and go to state 67
    COMMA           shift and go to state 68


state 47

    (48) column_definitions -> column_definition .

    RPAREN          reduce using rule 48 (column_definitions -> column_definition .)
    COMMA           reduce using rule 48 (column_definitions -> column_definition .)


state 48

    (47) column_definition -> ID . TYPE options_type

    TYPE            shift and go to state 69


state 49

    (12) query -> CAMBIA_LA_TABLA table_name add_column drop_column . SEMICOLON

    SEMICOLON       shift and go to state 70


state 50

    (33) drop_column -> ELIMINA_LA_COLUMNA . column_name
    (66) column_name -> . ID

    ID              shift and go to state 37

    column_name                    shift and go to state 71

state 51

    (34) drop_column -> empty .

    SEMICOLON       reduce using rule 34 (drop_column -> empty .)


state 52

    (31) add_column -> AGREGA_LA_COLUMNA column_definition .

    ELIMINA_LA_COLUMNA reduce using rule 31 (add_column -> AGREGA_LA_COLUMNA column_definition .)
    SEMICOLON       reduce using rule 31 (add_column -> AGREGA_LA_COLUMNA column_definition .)


state 53

    (1) query -> TRAEME selection_todo selection_distinct selection_contando DE_LA_TABLA . table_name optional_join condition optional_group_by optional_having optional_order_by optional_limit SEMICOLON
    (65) table_name -> . ID

    ID              shift and go to state 13

    table_name                     shift and go to state 72

state 54

    (6) selection_contando -> CONTANDO LPAREN . TODO RPAREN

    TODO            shift and go to state 73


state 55

    (8) query -> METE_EN table_name LPAREN column_list RPAREN . LOS_VALORES LPAREN value_list RPAREN SEMICOLON

    LOS_VALORES     shift and go to state 74


state 56

    (51) column_list -> column_list COMMA . ID

    ID              shift and go to state 75


state 57

    (9) query -> ACTUALIZA table_name SETEA column_name OPERATOR . value condition SEMICOLON
    (54) value -> . NUMBER
    (55) value -> . STRING
    (56) value -> . ID

    NUMBER          shift and go to state 77
    STRING          shift and go to state 78
    ID              shift and go to state 79

    value                          shift and go to state 76

state 58

    (23) expression -> ID OPERATOR . value
    (54) value -> . NUMBER
    (55) value -> . STRING
    (56) value -> . ID

    NUMBER          shift and go to state 77
    STRING          shift and go to state 78
    ID              shift and go to state 79

    value                          shift and go to state 80

state 59

    (24) expression -> ID PARECIDO_A . value
    (54) value -> . NUMBER
    (55) value -> . STRING
    (56) value -> . ID

    NUMBER          shift and go to state 77
    STRING          shift and go to state 78
    ID              shift and go to state 79

    value                          shift and go to state 81

state 60

    (25) expression -> ID ES_NULO .

    SEMICOLON       reduce using rule 25 (expression -> ID ES_NULO .)
    AGRUPANDO_POR   reduce using rule 25 (expression -> ID ES_NULO .)
    WHERE_DEL_GROUP_BY reduce using rule 25 (expression -> ID ES_NULO .)
    ORDENA_POR      reduce using rule 25 (expression -> ID ES_NULO .)
    COMO_MUCHO      reduce using rule 25 (expression -> ID ES_NULO .)


state 61

    (26) expression -> ID NO_NULO .

    SEMICOLON       reduce using rule 26 (expression -> ID NO_NULO .)
    AGRUPANDO_POR   reduce using rule 26 (expression -> ID NO_NULO .)
    WHERE_DEL_GROUP_BY reduce using rule 26 (expression -> ID NO_NULO .)
    ORDENA_POR      reduce using rule 26 (expression -> ID NO_NULO .)
    COMO_MUCHO      reduce using rule 26 (expression -> ID NO_NULO .)


state 62

    (27) expression -> ID ENTRE . value Y value
    (54) value -> . NUMBER
    (55) value -> . STRING
    (56) value -> . ID

    NUMBER          shift and go to state 77
    STRING          shift and go to state 78
    ID              shift and go to state 79

    value                          shift and go to state 82

state 63

    (28) expression -> ID EN_ESTO . LPAREN value_list RPAREN

    LPAREN          shift and go to state 83


state 64

    (30) expression -> ID DOT . ID OPERATOR STRING

    ID              shift and go to state 84


state 65

    (29) expression -> EXISTE LPAREN . query RPAREN
    (1) query -> . TRAEME selection_todo selection_distinct selection_contando DE_LA_TABLA table_name optional_join condition optional_group_by optional_having optional_order_by optional_limit SEMICOLON
    (8) query -> . METE_EN table_name LPAREN column_list RPAREN LOS_VALORES LPAREN value_list RPAREN SEMICOLON
    (9) query -> . ACTUALIZA table_name SETEA column_name OPERATOR value condition SEMICOLON
    (10) query -> . BORRA_DE_LA_TABLA table_name condition SEMICOLON
    (11) query -> . CREA_LA_TABLA table_name LPAREN column_definitions RPAREN SEMICOLON
